--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,6 +17,7 @@
         <li><%= link_to 'Sign up', new_user_registration_path%></li>
         <li><%= link_to 'Sign in', new_user_session_path%></li>
       <% end %>
+      <li><%= link_to 'Admin', admin_dashboard_path%></li>
     </ul>
 
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
