Add GQL Subscriptions
Based on https://www.keypup.io/blog/graphql-the-rails-way-part-3-subscriptions-with-websockets-via-pusher

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -8,6 +8,7 @@
   <li>Redis</li>
   <li>Devise</li>
   <li>Postgres</li>
+  <li><%= link_to 'Pusher Demo', '/pusher_demo.html' %></li>
 </ul>
 
 <div>
