Add very simple react example
Based on https://learnetto.com/blog/react-rails

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -9,24 +9,5 @@
   <li>Devise</li>
   <li>Postgres</li>
   <li><%= link_to 'Pusher Demo', '/pusher_demo.html' %></li>
+  <li><%= link_to 'React Test Page', '/welcome/react' %></li>
 </ul>
-
-<div>
-  <h1>GQL Examples</h1>
-  <pre>
-    {
-      testField
-    }
-  </pre>
-  <pre>
-    {
-      articles {
-        id
-        title
-        text
-        createdAt
-        updatedAt
-      }
-    }
-  </pre>
-</div>
