--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -7,6 +7,7 @@
     <tr>
       <th>Title</th>
       <th>Text</th>
+      <th>User</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -16,9 +17,12 @@
       <tr>
         <td><%= article.title %></td>
         <td><%= article.text %></td>
+        <td><%= link_to article.user.name, user_path(article.user_id) %></td>
         <td><%= link_to 'Show', article %></td>
         <td><%= link_to 'Edit', edit_article_path(article) %></td>
-        <td><%= link_to 'Destroy', article, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Destroy',
+          article,
+          method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
