--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -10,5 +10,10 @@
   <%= @article.text %>
 </p>
 
+<p>
+  <strong>User:</strong>
+  <%= link_to @article.user.name, admin_user_path(@article.user_id) %>
+</p>
+
 <%= link_to 'Edit', edit_article_path(@article) %> |
 <%= link_to 'Back', articles_path %>
